--- a/Catharsis.Domain.NHibernate.3.5/Catharsis.Domain.NHibernate.3.5.csproj
+++ b/Catharsis.Domain.NHibernate.3.5/Catharsis.Domain.NHibernate.3.5.csproj
@@ -34,19 +34,19 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Catharsis.Commons">
-      <HintPath>..\packages\Catharsis.Commons.1.8\lib\net35\Catharsis.Commons.dll</HintPath>
+      <HintPath>..\packages\Catharsis.Commons.1.9\lib\net35\Catharsis.Commons.dll</HintPath>
     </Reference>
     <Reference Include="Catharsis.Domain">
-      <HintPath>..\packages\Catharsis.Domain.1.3\lib\net35\Catharsis.Domain.dll</HintPath>
+      <HintPath>..\packages\Catharsis.Domain.1.3.2.1\lib\net35\Catharsis.Domain.dll</HintPath>
     </Reference>
     <Reference Include="FluentNHibernate">
       <HintPath>..\packages\FluentNHibernate.1.4.0.0\lib\net35\FluentNHibernate.dll</HintPath>
     </Reference>
-    <Reference Include="Iesi.Collections">
+    <Reference Include="Iesi.Collections, Version=1.0.1.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <HintPath>..\packages\Iesi.Collections.3.2.0.4000\lib\Net35\Iesi.Collections.dll</HintPath>
     </Reference>
-    <Reference Include="NHibernate">
-      <HintPath>..\packages\NHibernate.3.3.1.4000\lib\Net35\NHibernate.dll</HintPath>
+    <Reference Include="NHibernate, Version=3.3.1.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+      <HintPath>..\packages\NHibernate.3.3.3.4001\lib\Net35\NHibernate.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
