--- a/Catharsis.Domain.NHibernate.4.0/Catharsis.Domain.NHibernate.4.0.csproj
+++ b/Catharsis.Domain.NHibernate.4.0/Catharsis.Domain.NHibernate.4.0.csproj
@@ -33,10 +33,10 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="Catharsis.Commons">
-      <HintPath>..\packages\Catharsis.Commons.1.8\lib\net40\Catharsis.Commons.dll</HintPath>
+      <HintPath>..\packages\Catharsis.Commons.1.9\lib\net40\Catharsis.Commons.dll</HintPath>
     </Reference>
-    <Reference Include="Catharsis.Domain, Version=1.3.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Catharsis.Domain.1.3.1\lib\net40\Catharsis.Domain.dll</HintPath>
+    <Reference Include="Catharsis.Domain">
+      <HintPath>..\packages\Catharsis.Domain.1.3.2.1\lib\net40\Catharsis.Domain.dll</HintPath>
     </Reference>
     <Reference Include="FluentNHibernate">
       <HintPath>..\packages\FluentNHibernate.1.4.0.0\lib\net35\FluentNHibernate.dll</HintPath>
