--- a/Catharsis.Domain.NHibernate.Tests/Catharsis.Domain.NHibernate.Tests.csproj
+++ b/Catharsis.Domain.NHibernate.Tests/Catharsis.Domain.NHibernate.Tests.csproj
@@ -32,11 +32,11 @@
     <DocumentationFile>bin\Release\Catharsis.Domain.NHibernate.Tests.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Catharsis.Commons, Version=1.8.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Catharsis.Commons.1.8\lib\net40\Catharsis.Commons.dll</HintPath>
+    <Reference Include="Catharsis.Commons">
+      <HintPath>..\packages\Catharsis.Commons.1.9\lib\net40\Catharsis.Commons.dll</HintPath>
     </Reference>
-    <Reference Include="Catharsis.Domain, Version=1.3.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Catharsis.Domain.1.3.1\lib\net40\Catharsis.Domain.dll</HintPath>
+    <Reference Include="Catharsis.Domain">
+      <HintPath>..\packages\Catharsis.Domain.1.3.2.1\lib\net40\Catharsis.Domain.dll</HintPath>
     </Reference>
     <Reference Include="EntityFramework">
       <HintPath>..\packages\EntityFramework.6.0.2\lib\net40\EntityFramework.dll</HintPath>
