--- a/Catharsis.Domain.NHibernate.3.5.CP/Catharsis.Domain.NHibernate.3.5.CP.csproj
+++ b/Catharsis.Domain.NHibernate.3.5.CP/Catharsis.Domain.NHibernate.3.5.CP.csproj
@@ -33,8 +33,9 @@
     <DocumentationFile>bin\Release\Catharsis.Domain.NHibernate.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Catharsis.Commons">
-      <HintPath>..\packages\Catharsis.Commons.1.9\lib\net35-client\Catharsis.Commons.dll</HintPath>
+    <Reference Include="Catharsis.Commons, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Catharsis.Commons.2.0\lib\net35-client\Catharsis.Commons.dll</HintPath>
     </Reference>
     <Reference Include="Catharsis.Domain">
       <HintPath>..\packages\Catharsis.Domain.1.3.2.1\lib\net35-client\Catharsis.Domain.dll</HintPath>
@@ -42,8 +43,8 @@
     <Reference Include="FluentNHibernate">
       <HintPath>..\packages\FluentNHibernate.1.4.0.0\lib\net35\FluentNHibernate.dll</HintPath>
     </Reference>
-    <Reference Include="Iesi.Collections">
-      <HintPath>..\packages\Iesi.Collections.3.2.0.4000\lib\Net35\Iesi.Collections.dll</HintPath>
+    <Reference Include="Iesi.Collections, Version=1.0.1.0, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
+      <HintPath>..\packages\Iesi.Collections.3.3.3.4001\lib\Net35\Iesi.Collections.dll</HintPath>
     </Reference>
     <Reference Include="NHibernate, Version=3.3.1.4000, Culture=neutral, PublicKeyToken=aa95f207798dfdb4, processorArchitecture=MSIL">
       <HintPath>..\packages\NHibernate.3.3.3.4001\lib\Net35\NHibernate.dll</HintPath>
