--- a/Catharsis.Domain.NHibernate.4.0/Catharsis.Domain.NHibernate.4.0.csproj
+++ b/Catharsis.Domain.NHibernate.4.0/Catharsis.Domain.NHibernate.4.0.csproj
@@ -32,8 +32,9 @@
     <DocumentationFile>bin\Release\Catharsis.Domain.NHibernate.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Catharsis.Commons">
-      <HintPath>..\packages\Catharsis.Commons.1.9\lib\net40\Catharsis.Commons.dll</HintPath>
+    <Reference Include="Catharsis.Commons, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Catharsis.Commons.2.0\lib\net40\Catharsis.Commons.dll</HintPath>
     </Reference>
     <Reference Include="Catharsis.Domain">
       <HintPath>..\packages\Catharsis.Domain.1.3.2.1\lib\net40\Catharsis.Domain.dll</HintPath>
