--- a/Catharsis.Domain.NHibernate.3.5.CP/Catharsis.Domain.NHibernate.3.5.CP.csproj
+++ b/Catharsis.Domain.NHibernate.3.5.CP/Catharsis.Domain.NHibernate.3.5.CP.csproj
@@ -33,12 +33,13 @@
     <DocumentationFile>bin\Release\Catharsis.Domain.NHibernate.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Catharsis.Commons, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Catharsis.Commons, Version=2.0.1.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Catharsis.Commons.2.0\lib\net35-client\Catharsis.Commons.dll</HintPath>
+      <HintPath>..\packages\Catharsis.Commons.2.0.1\lib\net35-client\Catharsis.Commons.dll</HintPath>
     </Reference>
-    <Reference Include="Catharsis.Domain">
-      <HintPath>..\packages\Catharsis.Domain.1.3.2.1\lib\net35-client\Catharsis.Domain.dll</HintPath>
+    <Reference Include="Catharsis.Domain, Version=1.3.4.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Catharsis.Domain.1.3.4\lib\net35-client\Catharsis.Domain.dll</HintPath>
     </Reference>
     <Reference Include="FluentNHibernate">
       <HintPath>..\packages\FluentNHibernate.1.4.0.0\lib\net35\FluentNHibernate.dll</HintPath>
