--- a/Catharsis.Domain.NHibernate.4.0/Catharsis.Domain.NHibernate.4.0.csproj
+++ b/Catharsis.Domain.NHibernate.4.0/Catharsis.Domain.NHibernate.4.0.csproj
@@ -36,15 +36,19 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\packages\Catharsis.Commons.2.0.1\lib\net40\Catharsis.Commons.dll</HintPath>
     </Reference>
-    <Reference Include="Catharsis.Domain, Version=1.3.4.0, Culture=neutral, processorArchitecture=MSIL">
+    <Reference Include="Catharsis.Domain, Version=1.4.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\packages\Catharsis.Domain.1.3.4\lib\net40\Catharsis.Domain.dll</HintPath>
+      <HintPath>..\packages\Catharsis.Domain.1.4\lib\net40\Catharsis.Domain.dll</HintPath>
     </Reference>
     <Reference Include="FluentNHibernate">
       <HintPath>..\packages\FluentNHibernate.1.4.0.0\lib\net35\FluentNHibernate.dll</HintPath>
     </Reference>
     <Reference Include="Iesi.Collections">
       <HintPath>..\packages\Iesi.Collections.3.2.0.4000\lib\Net35\Iesi.Collections.dll</HintPath>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=6.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Newtonsoft.Json.6.0.1\lib\net40\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="NHibernate">
       <HintPath>..\packages\NHibernate.3.3.3.4001\lib\Net35\NHibernate.dll</HintPath>
