--- a/Catharsis.Domain.NHibernate.Tests/packages.config
+++ b/Catharsis.Domain.NHibernate.Tests/packages.config
@@ -1,12 +1,16 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Catharsis.Commons" version="2.0.1" targetFramework="net40" />
-  <package id="Catharsis.Domain" version="1.3.4" targetFramework="net40" />
-  <package id="EntityFramework" version="6.0.2" targetFramework="net40" />
+  <package id="Catharsis.Domain" version="1.4" targetFramework="net40" />
+  <package id="EntityFramework" version="6.1.0" targetFramework="net40" />
   <package id="FluentNHibernate" version="1.4.0.0" targetFramework="net40" />
   <package id="Iesi.Collections" version="3.2.0.4000" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="6.0.1" targetFramework="net40" />
   <package id="NHibernate" version="3.3.3.4001" targetFramework="net40" />
-  <package id="Npgsql" version="2.0.14.3" targetFramework="net40" />
-  <package id="System.Data.SQLite" version="1.0.91.3" targetFramework="net40" />
+  <package id="Npgsql" version="2.1.0" targetFramework="net40" />
+  <package id="System.Data.SQLite" version="1.0.92.0" targetFramework="net40" />
+  <package id="System.Data.SQLite.Core" version="1.0.92.0" targetFramework="net40" />
+  <package id="System.Data.SQLite.EF6" version="1.0.92.0" targetFramework="net40" />
+  <package id="System.Data.SQLite.Linq" version="1.0.92.0" targetFramework="net40" />
   <package id="xunit" version="1.9.2" targetFramework="net40" />
 </packages>
