1. Updated README.md file 2. Minor changes

--- a/Catharsis.Domain.NHibernate.Tests/Catharsis.Domain.NHibernate.Tests.csproj
+++ b/Catharsis.Domain.NHibernate.Tests/Catharsis.Domain.NHibernate.Tests.csproj
@@ -35,8 +35,9 @@
     <Reference Include="Catharsis.Commons, Version=2.0.2.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Catharsis.Commons.2.0.2\lib\net40\Catharsis.Commons.dll</HintPath>
     </Reference>
-    <Reference Include="Catharsis.Domain, Version=1.5.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\Catharsis.Domain.1.5\lib\net40\Catharsis.Domain.dll</HintPath>
+    <Reference Include="Catharsis.Domain, Version=1.7.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Catharsis.Domain.1.7\lib\net40\Catharsis.Domain.dll</HintPath>
     </Reference>
     <Reference Include="FluentNHibernate, Version=1.4.0.0, Culture=neutral, PublicKeyToken=8aa435e3cb308880, processorArchitecture=MSIL">
       <HintPath>..\packages\FluentNHibernate.1.4.0.0\lib\net35\FluentNHibernate.dll</HintPath>
