--- a/VS2010/Catharsis.Domain.NHibernate.4.0.CP/Catharsis.Domain.NHibernate.4.0.CP.csproj
+++ b/VS2010/Catharsis.Domain.NHibernate.4.0.CP/Catharsis.Domain.NHibernate.4.0.CP.csproj
@@ -33,11 +33,13 @@
     <DocumentationFile>bin\Release\Catharsis.Domain.NHibernate.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Catharsis.Commons">
-      <HintPath>..\packages\Catharsis.Commons.2.5\lib\net40-client\Catharsis.Commons.dll</HintPath>
+    <Reference Include="Catharsis.Commons, Version=2.6.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Catharsis.Commons.2.6.1\lib\net40-client\Catharsis.Commons.dll</HintPath>
     </Reference>
-    <Reference Include="Catharsis.Domain">
-      <HintPath>..\packages\Catharsis.Domain.2.2\lib\net40-client\Catharsis.Domain.dll</HintPath>
+    <Reference Include="Catharsis.Domain, Version=2.3.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Catharsis.Domain.2.3\lib\net40-client\Catharsis.Domain.dll</HintPath>
     </Reference>
     <Reference Include="FluentNHibernate, Version=1.4.0.0, Culture=neutral, PublicKeyToken=8aa435e3cb308880, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
