--- a/VS2013/Catharsis.Domain.NHibernate.4.5/Catharsis.Domain.NHibernate.4.5.csproj
+++ b/VS2013/Catharsis.Domain.NHibernate.4.5/Catharsis.Domain.NHibernate.4.5.csproj
@@ -31,8 +31,9 @@
     <DocumentationFile>bin\Release\Catharsis.Domain.NHibernate.XML</DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="Catharsis.Commons">
-      <HintPath>packages\Catharsis.Commons.2.5\lib\net45\Catharsis.Commons.dll</HintPath>
+    <Reference Include="Catharsis.Commons, Version=2.6.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Catharsis.Commons.2.6.1\lib\net45\Catharsis.Commons.dll</HintPath>
     </Reference>
     <Reference Include="Catharsis.Domain.4.5">
       <HintPath>packages\Catharsis.Domain.2.2\lib\net45\Catharsis.Domain.4.5.dll</HintPath>
